syntax = "proto3";
package product;
option go_package = "./api/protobuf/product;productpb";

service ProductService {
  rpc ListProducts(ReqListProducts) returns (RspListProducts) {}
  rpc GetProduct(ReqGetProduct) returns (RspGetProduct) {}
  rpc SearchProducts(ReqSearchProducts) returns (RspSearchProducts) {}
  rpc AddProduct(ReqAddProduct) returns (RspAddProduct) {}
}

message Product {
  uint32 id = 1;
  string name = 2;
  string description = 3;
  string picture = 4;
  float price = 5;
  repeated string categories = 6;
}

message ReqListProducts {
  int32 page = 1;
  int64 pageSize = 2;
  string categoryName = 3;
}

message RspListProducts {
  repeated Product products = 1;
}

message ReqGetProduct {
  uint32 id = 1;
}

message RspGetProduct {
  Product product = 1;
}

message ReqSearchProducts {
  string query = 1;
}

message RspSearchProducts {
  repeated Product results = 1;
}

message ReqAddProduct {
  Product product = 1;
}

message RspAddProduct {
  int32 error_code = 1;
  Product product = 2;
}

